<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraint_layout">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/maginwide" android:layout_marginRight="@dimen/maginwide"
            android:layout_marginLeft="@dimen/maginwide" android:fontFamily="@font/roboto"
            android:textSize="@dimen/box_text_size" style="@style/whiteBox" android:id="@+id/box_onetext"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_twotext"
            app:layout_constraintTop_toBottomOf="@+id/box_onetext" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_threetext" style="@style/whiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_fourtext"
            app:layout_constraintTop_toTopOf="@+id/box_twotext" app:layout_constraintStart_toEndOf="@+id/box_twotext"
            android:layout_marginStart="@dimen/maginwide" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/maginwide"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_fourtext"
            style="@style/whiteBox" app:layout_constraintTop_toBottomOf="@+id/box_threetext"
            app:layout_constraintBottom_toTopOf="@+id/box_fivetext"
            app:layout_constraintStart_toEndOf="@+id/box_twotext" android:layout_marginStart="@dimen/maginwide"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/maginwide"
            android:layout_marginTop="@dimen/maginwide" android:layout_marginBottom="@dimen/maginwide"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_fivetext" style="@style/whiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_twotext"
            app:layout_constraintTop_toBottomOf="@+id/box_fourtext"
            app:layout_constraintStart_toEndOf="@+id/box_twotext" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/maginwide"
    />
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_text" android:fontFamily="@font/roboto" android:textSize="24sp"
            android:textStyle="bold" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_text"/>
    <TextView
            android:text="@string/tap_the_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_text" android:fontFamily="@font/roboto"
            app:layout_constraintStart_toEndOf="@+id/label_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_twotext"
    />

</androidx.constraintlayout.widget.ConstraintLayout>